--- a/zookeeperdocker/build.gradle
+++ b/zookeeperdocker/build.gradle
@@ -12,7 +12,8 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.13',
-    	'org.apache.zookeeper:zookeeper:3.4.8'
+    	'org.apache.zookeeper:zookeeper:3.4.8',
+    	'commons-cli:commons-cli:1.3.1'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
