--- a/zookeeperdocker/build.gradle
+++ b/zookeeperdocker/build.gradle
@@ -10,6 +10,10 @@ repositories {
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
+	// http://mvnrepository.com/artifact/org.apache.curator/curator-framework
+	compile group: 'org.apache.curator', name: 'curator-framework', version: '3.1.0'
+	compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
+
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.13',
     	'org.apache.zookeeper:zookeeper:3.4.8',
